--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,37 @@
 <app-header></app-header>
 
 <!-- <app-main></app-main> -->
-<!-- <app-server></app-server> -->
+<app-server></app-server>
  <app-lecture2></app-lecture2>
 <app-footer></app-footer>
+
+<!-- <div class="container ">
+  <div class="row justify-content-center">
+    <div class="col-lg-4">
+      <div class="mb-3">
+        <label  class="form-label">Server Name</label>
+        <input type="text" class="form-control" [(ngModel)]="serverName">
+      </div>
+      <div class="mb-3">
+        <label  class="form-label">Server Content</label>
+        <input type="text" class="form-control" [(ngModel)]="serverContent">
+      </div>
+      <button class="btn btn-primary me-3" (click)="onAddServer()">Main Server</button>
+      <button class="btn btn-primary" (click)="onAddPrintBlue()">PrintBlue</button>
+    </div>
+  </div>
+  <hr class="my-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-4">
+      <div class="card">
+        <div class="card-header">
+          Featured
+        </div>
+        <div class="card-body">
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div> -->
